# rag

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml
backend/: README.md  compose.db.yml  compose.generation.yml  compose.ingestion.yml  compose.retrieval.yml  compose.yml  localhost.rest  pyproject.toml  routes.test.rest
backend/api_gateway/: pyproject.toml
backend/api_gateway/app/: config.py  deps.py  main.py  models.py  routers.py
backend/generation_service/: .env.example  Dockerfile  hello.py  pyproject.toml  requirements.txt
backend/generation_service/app/: config.py  deps.py  main.py  models.py  routers.py
backend/generation_service/app/routers/: generation.py  health.py
backend/generation_service/app/services/: generation.py
backend/generation_service/tests/: conftest.py  test_api.py  test_generation.py
backend/generation_service/tests/integration/: conftest.py  test_api.py
backend/generation_service/tests/integration/api/: test_endpoints.py
backend/generation_service/tests/integration/services/: conftest.py  test_generation_service.py
backend/generation_service/tests/unit/: conftest.py  test_models.py
backend/generation_service/tests/unit/services/: test_generation_service.py
backend/ingestion-service/: .env.example  .env.solo  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_runner_direct.py  verify_tests.py
backend/ingestion-service/app/: config.py  deps.py  main.py  models.py  router.py  router_backup.py
backend/ingestion-service/app/routers/: collection.py  documents.py  ingestion.py
backend/ingestion-service/app/services/: chroma_manager.py  collection_manager.py  document_service.py  embedding_manager.py  file_management.py  file_uploader.py  ingestion_processor.py  ingestion_state.py  vector_store_manager.py
backend/ingestion-service/tests/: conftest.py  test_api.py  test_ingestion_processor.py  test_main.py
backend/ingestion-service/tests/fixtures/: data_builders.py  service_factories.py
backend/ingestion-service/tests/integration/: conftest.py  conftest_fixed.py  conftest_isolated.py  conftest_minimal.py  conftest_new.py  conftest_v2.py  test_basic_integration.py  test_minimal.py  test_standalone.py
backend/ingestion-service/tests/integration/api/: test_endpoints.py  test_endpoints_fixed.py
backend/ingestion-service/tests/integration/services/: __init__.py  conftest.py  test_service_integrations.py  test_state_management.py
backend/ingestion-service/tests/unit/: conftest.py  test_models.py
backend/ingestion-service/tests/unit/services/: conftest.py  test_chroma_manager.py  test_collection_manager.py  test_file_management.py  test_ingestion_processor.py  test_ingestion_state.py
backend/rag_service/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/rag_service/app/: config.py  deps.py  main.py  models.py  routers.py
backend/rag_service/app/routers/: chat.py  documents.py  health.py  ingestion.py
backend/rag_service/app/services/: chat_processor.py  http_client.py
backend/rag_service/tests/: conftest.py  test_api.py  test_chat_processor.py
backend/rag_service/tests/integration/: conftest.py  test_api.py  test_chat_integration.py  test_documents_integration.py
backend/rag_service/tests/unit/: conftest.py  test_chat_processor.py  test_chat_router.py  test_deps.py  test_documents_router.py  test_http_client.py  test_models.py
backend/rag_service/tests/unit/routers/: test_chat_router.py  test_documents_router.py  test_health_router.py  test_ingestion_router.py
backend/rag_service/tests/unit/services/: test_http_client.py  (+1 more)
backend/retrieval_service/: .env.example  .env.solo  Dockerfile  load_dummy_data.py  pyproject.toml  requirements.txt
backend/retrieval_service/app/: config.py  deps.py  main.py  models.py  routers.py
backend/retrieval_service/app/routers/: __init__.py  health.py  retrieval.py
backend/retrieval_service/app/services/: chroma_manager.py  embedding_manager.py  generation.py  vector_search.py  vector_store_manager.py
backend/retrieval_service/tests/: conftest.py  test_api.py  test_generation.py  test_setup.py  test_vector_search.py
backend/retrieval_service/tests/integration/: __init__.py  conftest.py  test_api.py
backend/retrieval_service/tests/unit/: __init__.py  conftest.py  test_chroma_manager.py  test_embedding_manager.py  test_models.py  test_vector_search.py  test_vector_store_manager.py
(+18 files in other folders)
