[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.1",
]

[tool.uv.workspace]
members = ["api_gateway", "rag_service"]

