[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.6",
    "langchain>=0.3.14",
    "langchain-community>=0.3.23",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sentence-transformers>=4.1.0",
    "unstructured[local-inference]>=0.17.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyfakefs>=5.8.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]
