[project]
name = "rag-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "langchain>=0.3.14",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pytest-cov>=6.1.1",
    "python-multipart>=0.0.12",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]
