[project]
name = "retrieval-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
