[project]
name = "retrieval-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "numpy>=1.26.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]
